--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
 		        <li><a href="">FB</a></li>
-		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"></a><img class="cnh" src="assets/cnh-emblem.png" /></li>
+		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li>
 		        
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
@@ -43,11 +43,22 @@
 		</nav>
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
+	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
+	<div class="section-1 body">
+		insert eye-catching graphic/video. the first thing everyone will see when they go onto the website.
+	</div>
+	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
+
+	<!-- ///////////////////// SECTION 0.5 BEGIN  //////////////////////// -->
+	<div class="section0 body">
+		Probably a quick overview of the event/message from the chair preceding the more detailed descriptions of different aspects of the event - workshops, making friends, having fun, and welcoming new members.
+	</div>
+	<!-- ///////////////////// SECTION 0.5 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
 	<div class="section1 body">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
+		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Animal Silhouette
 		</div>
 		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R1 s">
@@ -66,8 +77,8 @@
 
 	<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
 	<div class="section2 body">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
+		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Animal Silhouette
 		</div>
 		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R2 s">
@@ -84,8 +95,8 @@
 
 	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
 	<div class="section3 body">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
+		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Animal Silhouette
 		</div>
 		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R3 s">
@@ -102,8 +113,8 @@
 	
 	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
 	<div class="section4 body">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
+		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Animal Silhouette
 		</div>
 		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R4 s">
