--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<!-- ///////////////////// SECTION 0.5 BEGIN  //////////////////////// -->
 	<div class="section0 body">
-		Probably a quick overview of the event/message from the chair preceding the more detailed descriptions of different aspects of the event - workshops, making friends, having fun, and welcoming new members.
+		Probably a quick overview of the event/message from the chair preceding the more detailed descriptions of different aspects of the event - workshops, making friends, having fun, and welcoming new members. If you have ideas about any other little sections that should be added or existing ones that should be changed, let me know.
 	</div>
 	<!-- ///////////////////// SECTION 0.5 END  //////////////////////// -->
 
