--- a/index.html
+++ b/index.html
@@ -7,67 +7,73 @@
 		<link rel="stylesheet" href="main.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<style> h1{color: white;font-family: "TheBoldFont";font-size: 60px;display: block;padding: 0 10%;text-align: left;}</style>
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
 	<nav class="navbar navbar-default navbar-fixed-top">
+	  	<a class="navbar-brand" href="#">
+	          <img class="cki" alt="CKI" src="Assets/CKIWordmark_White.png">
+	    </a>
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
+
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-coll" aria-expanded="false">
+	      	<span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-      	<a class="navbar-brand" href="#">
-              <img class="cki" alt="CKI" src="Assets/CKIWordmark_White.png">
-        </a>
       
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    <div class="collapse navbar-collapse" id="nav-coll">
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">ABOUT</a></li>
 		        <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
-		        <li><a href="applications.html">APPLICATIONS</a></li>
+		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
-		        <li><a href="">FB</a></li>
+		        <li><a href="http://facebook.com">FB</a></li>
 		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li>
-		        
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
+
+
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
 	<div class="section-1 body">
-		insert eye-catching graphic/video. the first thing everyone will see when they go onto the website.
+		What do y'all think should go here... a graphic similar to the one that will be used on the FB event? The video of us running towards the camera? Something else?
 	</div>
 	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 0.5 BEGIN  //////////////////////// -->
 	<div class="section0 body">
-		Probably a quick overview of the event/message from the chair preceding the more detailed descriptions of different aspects of the event - workshops, making friends, having fun, and welcoming new members. If you have ideas about any other little sections that should be added or existing ones that should be changed, let me know.
+		I think here I wanna put Lindon's cutout (wearing safari gear) on the left and a message from him that has some general statistics about the event and his general overview. Background will probably end up being white?
 	</div>
 	<!-- ///////////////////// SECTION 0.5 END  //////////////////////// -->
 
+	<div class="background">
 	<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
 	<div class="section1 body">
-		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Animal Silhouette <br>
-			By the way, if you hover over the big "LEARN" on the right a description shows up. Let me know if this was straightforward to discover or if you think people won't find it.
+		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Something Decorative <br>
+			Spacing in this gradient section is a little weird rn but I can deal with that later. What kind of graphics/decorative elements would you want to see in this section? <br>
+			Do you like the gradient?
 		</div>
-		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<div class="H R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R1 s">
 				<h1>
 					LEARN
 				</h1>
 				<div class="hover hover1">
-					Learn all about CKI and stuff at workshops longer description be made later but Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					Learn all about Circle K International with workshops about stuff idk what to say someone halp
 				</div>
 			</div>
 			
@@ -78,58 +84,66 @@
 
 	<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
 	<div class="section2 body">
-		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Animal Silhouette
-		</div>
-		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="R2 s">
+		<div class="H L col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="L2 s">
 				<h1>
 					NETWORK
-				</h1>
+				</h1> 
 				<div class="hover hover2">
-					This one is about meeting new people from around the District. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to bring you together with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
 				</div>
 			</div>
+		</div>
+		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Something Decorative
 		</div>
 	</div>
 	<!-- ///////////////////// SECTION 2 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
 	<div class="section3 body">
-		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Animal Silhouette
+		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Something Decorative
 		</div>
-		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<div class="H R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R3 s">
 				<h1>
-					ENJOY
+					WELCOME
 				</h1>
 				<div class="hover hover3">
-					This one is about having fun with friends at things like team activities, skits, general sessions, etc. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					Each year, Fall Training Conference hosts hundreds of new members from clubs and divisions all over CNH. We make it a priority to provide a warm welcome for these members with a new member induction and several activities that allow everyone to gain a better sense of what Circle K International is and what we stand for.
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
 	
-	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
+	<!-- ///////////////////// SECTION 4 BEGIN  //////////////////////// -->
 	<div class="section4 body">
-		<div class="L col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Animal Silhouette
-		</div>
-		<div class="R col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="R4 s">
+		<div class="H L col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="L4 s">
 				<h1>
-					WELCOME
+					ENJOY
 				</h1>
 				<div class="hover hover4">
-					This one is about New Member Induction/the emphasis on welcoming new members. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					Above all, Fall Training Conference is a time for you to enjoy yourself and create long-lasting memories with your CKI friends! With close team activities, amazing campfire skits, and spirited general sessions, FTC really is a Circle K experience for all to treasure.
 				</div>
 			</div>
 		</div>
+		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			Insert Something Decorative
+		</div>
 	</div>
-	<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
-
+	<!-- ///////////////////// SECTION 4 END  //////////////////////// -->
+	
+	<!-- ///////////////////// SECTION 5 BEGIN  //////////////////////// -->
+	<style>div.section5{padding-top: 150px; height: 300px;}</style>
+	<div class="section5 body">
+		At the bottom some landscape graphic?
+	</div>
+	<!-- ///////////////////// SECTION 5 END  //////////////////////// -->
+	
+	</div>
 	
 
 </html>
