--- a/committee1.html
+++ b/committee1.html
@@ -8,6 +8,13 @@
 		<link rel="stylesheet" href="committee.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+		<meta charset="utf-8"> 
+		<style>
+			div.profile{
+				height: 480px;
+			}
+		</style>
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
@@ -53,97 +60,97 @@
 
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Lindon.png" alt="">
-		      <h3>LINDON TRAN</h3>
+		      <h3>linton</h3>
 		      <h4>FTC Chair</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Allen.png" alt="">
-		      <h3>ALLEN PHAM</h3>
+		      <h3>homebody snek <i class="em em-snake"></i></h3>
 		      <h4>Executive Assistant</h4>
 		      <p>USC</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Eddie.png" alt="">
-		      <h3>EDWARD HUANG</h3>
+		      <h3><i class="em em-princess"></i><i class="em em-princess"></i><i class="em em-princess"></i></h3>
 		      <h4>Executive Assistant</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Jonathan.png" alt="">
-		      <h3>JONATHAN CHU</h3>
+		      <h3>diego</h3>
 		      <h4>AV/Technology </h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Cecilia.png" alt="">
-		      <h3>CECILIA NGUYEN</h3>
+		      <h3>d i n g u s 大便</h3>
 		      <h4>Campfire</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Olivia.png" alt="">
-		      <h3>OLIVIA CHANG</h3>
+		      <h3>i have a idea</h3>
 		      <h4>Decorations (Backdrop)</h4>
 		      <p>CSU Long Beach</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Alyssa.png" alt="">
-		      <h3>ALYSSA QUY</h3>
+		      <h3>hoesome jessica</h3>
 		      <h4>Decorations (Centerpieces)</h4>
 		      <p>UC San Diego</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Christina.png" alt="">
-		      <h3>CHRISTINA CHU</h3>
+		      <h3>left on read</h3>
 		      <h4>Entertainment</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Sandy.png" alt="">
-		      <h3>SANDY TSAN</h3>
+		      <h3>how do i die</h3>
 		      <h4>Graphics</h4>
 		      <p>UC Riverside</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Jennifer.png" alt="">
-		      <h3>JENNIFER NGUYEN</h3>
+		      <h3>SUCK A BAG OF DICKS</h3>
 		      <h4>Media</h4>
 		      <p>UNLV</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Darin.png" alt="">
-		      <h3>DARIN NGO</h3>
+		      <h3>pogi boy</h3>
 		      <h4>Program</h4>
 		      <p>UC Irvine</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Tiffany.png" alt="">
-		      <h3>TIFFANY NGUYEN</h3>
+		      <h3><i class="em em-lemon"></i><i class="em em-lemon"></i><i class="em em-lemon"></i></h3>
 		      <h4>Registration</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Josephine.png" alt="">
-		      <h3>JOSEPHINE MOLINA</h3>
+		      <h3>wholesome folsom</h3>
 		      <h4>Sergeant-At-Arms</h4>
 		      <p>Folsom Lake College</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Nick.png" alt="">
-		      <h3>NICK STRINGFELLOW</h3>
+		      <h3>unco nic</h3>
 		      <h4>Team Activities</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Alondra.png" alt="">
-		      <h3>ALONDRA COVARRUBIAS</h3>
+		      <h3>majestic 	<i class="em em-hatching_chick"></i></h3>
 		      <h4>Workshops</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Andrea.png" alt="">
-		      <h3>ANDREA FAMULARCANO</h3>
+		      <h3>peppersprayswaqq</h3>
 		      <h4>Workshops</h4>
 		      <p>SFSU</p>
 		    </div>
