--- a/committee1.html
+++ b/committee1.html
@@ -61,55 +61,55 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Lindon.png" alt="">
 		      <h3>linton</h3>
-		      <h4>FTC Chair</h4>
+		      <h4>Lint Remover</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Allen.png" alt="">
 		      <h3>homebody snek <i class="em em-snake"></i></h3>
-		      <h4>Executive Assistant</h4>
+		      <h4>Aesthetic Backstabber</h4>
 		      <p>USC</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Eddie.png" alt="">
 		      <h3><i class="em em-princess"></i><i class="em em-princess"></i><i class="em em-princess"></i></h3>
-		      <h4>Executive Assistant</h4>
+		      <h4>Taylor Swift Lover</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Jonathan.png" alt="">
 		      <h3>diego</h3>
-		      <h4>AV/Technology </h4>
+		      <h4>Badass Motherfucker</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Cecilia.png" alt="">
 		      <h3>d i n g u s 大便</h3>
-		      <h4>Campfire</h4>
+		      <h4>Professional Pooper + Skilled Snatcher</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Olivia.png" alt="">
 		      <h3>i have a idea</h3>
-		      <h4>Decorations (Backdrop)</h4>
+		      <h4>Will Suck Your Blood</h4>
 		      <p>CSU Long Beach</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Alyssa.png" alt="">
 		      <h3>hoesome jessica</h3>
-		      <h4>Decorations (Centerpieces)</h4>
+		      <h4>Starbucks Hoe</h4>
 		      <p>UC San Diego</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Christina.png" alt="">
 		      <h3>left on read</h3>
-		      <h4>Entertainment</h4>
+		      <h4>Eyeless One</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Sandy.png" alt="">
 		      <h3>how do i die</h3>
-		      <h4>Graphics</h4>
+		      <h4>Fucking Savage</h4>
 		      <p>UC Riverside</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
@@ -121,25 +121,25 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Darin.png" alt="">
 		      <h3>pogi boy</h3>
-		      <h4>Program</h4>
+		      <h4>Will Make Us Breakfast</h4>
 		      <p>UC Irvine</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Tiffany.png" alt="">
 		      <h3><i class="em em-lemon"></i><i class="em em-lemon"></i><i class="em em-lemon"></i></h3>
-		      <h4>Registration</h4>
+		      <h4>Cal Hipster</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Josephine.png" alt="">
 		      <h3>wholesome folsom</h3>
-		      <h4>Sergeant-At-Arms</h4>
+		      <h4>The Nice One</h4>
 		      <p>Folsom Lake College</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Nick.png" alt="">
 		      <h3>unco nic</h3>
-		      <h4>Team Activities</h4>
+		      <h4>40-YO Grizzly</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
@@ -151,7 +151,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Andrea.png" alt="">
 		      <h3>peppersprayswaqq</h3>
-		      <h4>Workshops</h4>
+		      <h4>Wagyu Obsessor</h4>
 		      <p>SFSU</p>
 		    </div>
 	</body>
