--- a/committee1.html
+++ b/committee1.html
@@ -91,7 +91,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Olivia.png" alt="">
 		      <h3>i have a idea</h3>
-		      <h4>Will Suck Your Blood</h4>
+		      <h4>Will Suck Your Blood and Spam your FB</h4>
 		      <p>CSU Long Beach</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
