--- a/FAQ.html
+++ b/FAQ.html
@@ -112,7 +112,7 @@
 						HOW MANY SAA'S DOES MY CLUB NEED?
 					</h2>
 					<p>
-						Each club will be expected to register a minimum of 2 SAAs, plus an additional SAA for every four members that attend. Review the SAA form for more detailed information.
+						Each club with at least 4 members in attendance will be expected to register a minimum of 2 SAAs, plus an additional SAA for every four members that attend. Review the SAA form for more detailed information.
 					</p>
 					<h2>
 						WHAT HAPPENS IF I ARRIVE LATE TO FTC?
