--- a/committee.html
+++ b/committee.html
@@ -52,99 +52,116 @@
 		</div>
 
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Lindon.png" alt="">
+		    <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Lindon.png" onmouseover="this.src='Assets/Committee/Schools/UCLA.png'" onmouseout="this.src='Assets/Committee/Cropped/Lindon.png'" />
+		      <!--<img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Lindon.png" alt="">-->
 		      <h3>LINDON TRAN</h3>
 		      <h4>FTC Chair</h4>
+		      <h4>ftc@cnhcirclek.org</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Allen.png" alt="">
-		      <h3>ALLEN PHAM</h3>
+			<img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Allen.png" onmouseover="this.src='Assets/Committee/Schools/USC.png'" onmouseout="this.src='Assets/Committee/Cropped/Allen.png'" />	      
+			  <h3>ALLEN PHAM</h3>
 		      <h4>Executive Assistant</h4>
+		      <h4>ftc.execassistant@gmail.com</h4>
 		      <p>USC</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Eddie.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Eddie.png" onmouseover="this.src='Assets/Committee/Schools/UCD.png'" onmouseout="this.src='Assets/Committee/Cropped/Eddie.png'" />
 		      <h3>EDWARD HUANG</h3>
 		      <h4>Executive Assistant</h4>
+		      <h4>ftc.execassistant@gmail.com</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jonathan.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jonathan.png" onmouseover="this.src='Assets/Committee/Schools/UCLA.png'" onmouseout="this.src='Assets/Committee/Cropped/Jonathan.png'" />
 		      <h3>JONATHAN CHU</h3>
 		      <h4>AV/Technology </h4>
+		      <h4>avtech.ftc@gmail.com</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Cecilia.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Cecilia.png" onmouseover="this.src='Assets/Committee/Schools/UCB.png'" onmouseout="this.src='Assets/Committee/Cropped/Cecilia.png'" />
 		      <h3>CECILIA NGUYEN</h3>
 		      <h4>Campfire</h4>
+		      <h4>ftc.campfireskits@gmail.com</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Olivia.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Olivia.png" onmouseover="this.src='Assets/Committee/Schools/CSULB.png'" onmouseout="this.src='Assets/Committee/Cropped/Olivia.png'" />
 		      <h3>OLIVIA CHANG</h3>
 		      <h4>Decorations (Backdrop)</h4>
+		      <h4>ftc.decorations@gmail.com</h4>
 		      <p>CSU Long Beach</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Alyssa.png" alt="">
+		     <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Alyssa.png" onmouseover="this.src='Assets/Committee/Schools/UCSD.png'" onmouseout="this.src='Assets/Committee/Cropped/Alyssa.png'" />
 		      <h3>ALYSSA QUY</h3>
 		      <h4>Decorations (Centerpieces)</h4>
+		      <h4>ftc.decorations@gmail.com</h4>
 		      <p>UC San Diego</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Christina.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Christina.png" onmouseover="this.src='Assets/Committee/Schools/UCD.png'" onmouseout="this.src='Assets/Committee/Cropped/Christina.png'" />
 		      <h3>CHRISTINA CHU</h3>
 		      <h4>Entertainment</h4>
+		      <h4>ftc.entertainments@gmail.com</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Sandy.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Sandy.png" onmouseover="this.src='Assets/Committee/Schools/UCR.png'" onmouseout="this.src='Assets/Committee/Cropped/Sandy.png'" />
 		      <h3>SANDY TSAN</h3>
 		      <h4>Graphics</h4>
+		      <h4>ftc.graphics@gmail.com</h4>
 		      <p>UC Riverside</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jennifer.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jennifer.png" onmouseover="this.src='Assets/Committee/Schools/UNLV.png'" onmouseout="this.src='Assets/Committee/Cropped/Jennifer.png'" />
 		      <h3>JENNIFER NGUYEN</h3>
 		      <h4>Media</h4>
+		      <h4>ftc.mediachair@gmail.com</h4>
 		      <p>UNLV</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Darin.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Darin.png" onmouseover="this.src='Assets/Committee/Schools/UCI.png'" onmouseout="this.src='Assets/Committee/Cropped/Darin.png'" />
 		      <h3>DARIN NGO</h3>
 		      <h4>Program</h4>
+		      <h4>ftc.programs@gmail.com</h4>
 		      <p>UC Irvine</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Tiffany.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Tiffany.png" onmouseover="this.src='Assets/Committee/Schools/UCB.png'" onmouseout="this.src='Assets/Committee/Cropped/Tiffany.png'" />
 		      <h3>TIFFANY NGUYEN</h3>
 		      <h4>Registration</h4>
+		      <h4>ftc.register@gmail.com</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Josephine.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Josephine.png" onmouseover="this.src='Assets/Committee/Schools/FLC.png'" onmouseout="this.src='Assets/Committee/Cropped/Josephine.png'" />
 		      <h3>JOSEPHINE MOLINA</h3>
 		      <h4>Sergeant-At-Arms</h4>
+		      <h4>ftc.saachair@gmail.com</h4>
 		      <p>Folsom Lake College</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Nick.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Nick.png" onmouseover="this.src='Assets/Committee/Schools/UCLA.png'" onmouseout="this.src='Assets/Committee/Cropped/Nick.png'" />
 		      <h3>NICK STRINGFELLOW</h3>
 		      <h4>Team Activities</h4>
+		      <h4>ftc.teamactivities@gmail.com</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Alondra.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/ALONDRA.png" onmouseover="this.src='Assets/Committee/Schools/UCLA.png'" onmouseout="this.src='Assets/Committee/Cropped/ALONDRA.png'" />
 		      <h3>ALONDRA COVARRUBIAS</h3>
 		      <h4>Workshops</h4>
+		      <h4>ftc.workshops@gmail.com</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Andrea.png" alt="">
+		     <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Andrea.png" onmouseover="this.src='Assets/Committee/Schools/SFSU.png'" onmouseout="this.src='Assets/Committee/Cropped/ANDREA.png'" />
 		      <h3>ANDREA FAMULARCANO</h3>
 		      <h4>Workshops</h4>
+		      <h4>ftc.workshops@gmail.com</h4>
 		      <p>SFSU</p>
 		    </div>
 	</body>
