--- a/committee1.html
+++ b/committee1.html
@@ -115,7 +115,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Jennifer.png" alt="">
 		      <h3>SUCK A BAG OF DICKS</h3>
-		      <h4>Media</h4>
+		      <h4>Spectral Liar</h4>
 		      <p>UNLV</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
