--- a/committee.html
+++ b/committee.html
@@ -2,12 +2,20 @@
 <html>
 	<head>
 		<title>Committee | FTC 2017</title>
-
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="committee.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<style>
+			img.cki{
+				margin-top: -23px;
+			}
+		</style>
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
