--- a/committee1.html
+++ b/committee1.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title>Committee | FTC 2017</title>
-
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="committee.css">
@@ -13,6 +15,9 @@
 		<style>
 			div.profile{
 				height: 480px;
+			}
+			img.cki{
+				margin-top: -23px;
 			}
 		</style>
 	</head>
