--- a/documents.html
+++ b/documents.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Documents | FTC 2017</title>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="documents.css">
@@ -12,15 +14,15 @@
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  	<a class="navbar-brand" href="#">
+	  	
+	  <div class="container-fluid">
+	  <a class="navbar-brand" href="#">
 	          <img class="cki" alt="CKI" src="Assets/CKIWordmark_White.png">
 	    </a>
-	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
 
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-coll" aria-expanded="false">
-	      	<span class="sr-only">Toggle navigation</span>
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
@@ -29,7 +31,7 @@
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="nav-coll">
+	    <div class="collapse navbar-collapse" id="myNavbar">
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">ABOUT</a></li>
 		        <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
@@ -37,7 +39,7 @@
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
 		        <li><a href="http://facebook.com">FB</a></li>
-		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li>
+		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
