--- a/committee1.html
+++ b/committee1.html
@@ -64,97 +64,97 @@
 		</div>
 
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Lindon.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Lindon.png" onmouseover="this.src='Assets/Committee/Shh/Lindon.png'" onmouseout="this.src='Assets/Committee/Cropped/Lindon.png'" />
 		      <h3>linton</h3>
 		      <h4>Lint Remover</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Allen.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Allen.png" onmouseover="this.src='Assets/Committee/Shh/Allen.png'" onmouseout="this.src='Assets/Committee/Cropped/Allen.png'" />
 		      <h3>homebody snek <i class="em em-snake"></i></h3>
 		      <h4>Aesthetic Backstabber</h4>
 		      <p>USC</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Eddie.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Eddie.png" onmouseover="this.src='Assets/Committee/Shh/Eddie.png'" onmouseout="this.src='Assets/Committee/Cropped/Eddie.png'" />
 		      <h3><i class="em em-princess"></i><i class="em em-princess"></i><i class="em em-princess"></i></h3>
 		      <h4>Taylor Swift Lover</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Jonathan.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jonathan.png" onmouseover="this.src='Assets/Committee/Shh/Jonathan.png'" onmouseout="this.src='Assets/Committee/Cropped/Jonathan.png'" />
 		      <h3>diego</h3>
 		      <h4>Badass Motherfucker</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Cecilia.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Cecilia.png" onmouseover="this.src='Assets/Committee/Shh/Cecilia.png'" onmouseout="this.src='Assets/Committee/Cropped/Cecilia.png'" />
 		      <h3>d i n g u s 大便</h3>
 		      <h4>Professional Pooper + Skilled Snatcher</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Olivia.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Olivia.png" onmouseover="this.src='Assets/Committee/Shh/Olivia.png'" onmouseout="this.src='Assets/Committee/Cropped/Olivia.png'" />
 		      <h3>i have a idea</h3>
 		      <h4>Will Suck Your Blood and Spam your FB</h4>
 		      <p>CSU Long Beach</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Alyssa.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Alyssa.png" onmouseover="this.src='Assets/Committee/Shh/Alyssa.png'" onmouseout="this.src='Assets/Committee/Cropped/Alyssa.png'" />
 		      <h3>hoesome jessica</h3>
 		      <h4>Starbucks Hoe</h4>
 		      <p>UC San Diego</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Christina.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Christina.png" onmouseover="this.src='Assets/Committee/Shh/Christina.png'" onmouseout="this.src='Assets/Committee/Cropped/Christina.png'" />
 		      <h3>left on read</h3>
 		      <h4>Eyeless One</h4>
 		      <p>UC Davis</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Sandy.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Sandy.png" onmouseover="this.src='Assets/Committee/Shh/Sandy.png'" onmouseout="this.src='Assets/Committee/Cropped/Sandy.png'" />
 		      <h3>how do i die</h3>
 		      <h4>Fucking Savage</h4>
 		      <p>UC Riverside</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Jennifer.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jennifer.png" onmouseover="this.src='Assets/Committee/Shh/Jennifer.png'" onmouseout="this.src='Assets/Committee/Cropped/Jennifer.png'" />
 		      <h3>SUCK A BAG OF DICKS</h3>
 		      <h4>Spectral Liar</h4>
 		      <p>UNLV</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Darin.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Darin.png" onmouseover="this.src='Assets/Committee/Shh/Darin.png'" onmouseout="this.src='Assets/Committee/Cropped/Darin.png'" />
 		      <h3>pogi boy</h3>
 		      <h4>Will Make Us Breakfast</h4>
 		      <p>UC Irvine</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Tiffany.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Tiffany.png" onmouseover="this.src='Assets/Committee/Shh/Tiffany.png'" onmouseout="this.src='Assets/Committee/Cropped/Tiffany.png'" />
 		      <h3><i class="em em-lemon"></i><i class="em em-lemon"></i><i class="em em-lemon"></i></h3>
 		      <h4>Cal Hipster</h4>
 		      <p>UC Berkeley</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Josephine.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Josephine.png" onmouseover="this.src='Assets/Committee/Shh/Josephine.png'" onmouseout="this.src='Assets/Committee/Cropped/Josephine.png'" />
 		      <h3>wholesome folsom</h3>
 		      <h4>The Nice One</h4>
 		      <p>Folsom Lake College</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Nick.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Nick.png" onmouseover="this.src='Assets/Committee/Shh/Nick.png'" onmouseout="this.src='Assets/Committee/Cropped/Nick.png'" />
 		      <h3>unco nic</h3>
 		      <h4>40-YO Grizzly</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Alondra.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Alondra.png" onmouseover="this.src='Assets/Committee/Shh/Alondra.png'" onmouseout="this.src='Assets/Committee/Cropped/Alondra.png'" />
 		      <h3>majestic 	<i class="em em-hatching_chick"></i></h3>
 		      <h4>Workshops</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
-		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Shh/Andrea.png" alt="">
+		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Andrea.png" onmouseover="this.src='Assets/Committee/Shh/Andrea.png'" onmouseout="this.src='Assets/Committee/Cropped/Andrea.png'" />
 		      <h3>peppersprayswaqq</h3>
 		      <h4>Wagyu Obsessor</h4>
 		      <p>SFSU</p>
