--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>FTC 2017</title>
 		
- 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="main.css">
@@ -49,25 +49,23 @@
 
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
-	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
+	<!-- ///////////////////// SECTION -1 BEGIN  //////////////////////// -->
 	<div class="section-1 body">
-		What do y'all think should go here... a graphic similar to the one that will be used on the FB event? The video of us running towards the camera? Something else?
+		
+	</div>
+	<!-- ///////////////////// SECTION -1 END  //////////////////////// -->
+
+	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
+	<div class="section0 body">
+		<img class="Lindon" src="Assets/Artboard1.png" alt="">
 	</div>
 	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
 
-	<!-- ///////////////////// SECTION 0.5 BEGIN  //////////////////////// -->
-	<div class="section0 body">
-		I think here I wanna put Lindon's cutout (wearing safari gear) on the left and a message from him that has some general statistics about the event and his general overview. Background will probably end up being white?
-	</div>
-	<!-- ///////////////////// SECTION 0.5 END  //////////////////////// -->
-
 	<div class="background">
 	<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
-	<div class="section1 body">
+	<div class="section1 body grad">
 		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Something Decorative <br>
-			Spacing in this gradient section is a little weird rn but I can deal with that later. What kind of graphics/decorative elements would you want to see in this section? <br>
-			Do you like the gradient?
+			Insert Something Decorative 
 		</div>
 		<div class="H R col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="R1 s">
@@ -75,7 +73,7 @@
 					LEARN
 				</h1>
 				<div class="hover hover1">
-					Learn all about Circle K International with workshops about stuff idk what to say someone halp
+					Offering dozens of informational and interactive workshops, Fall Training Conference provides limitless opportunities to gain knowledge in various topics. Whether you're hosting a workshop to share your expertise or attending one for the first time to learn something new, FTC gives members the opportunity to share new perspectives and ideas.
 				</div>
 			</div>
 			
@@ -85,7 +83,7 @@
 	<!-- ///////////////////// SECTION 1 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
-	<div class="section2 body">
+	<div class="section2 body grad">
 		<div class="H L col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="L2 s">
 				<h1>
@@ -103,7 +101,7 @@
 	<!-- ///////////////////// SECTION 2 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
-	<div class="section3 body">
+	<div class="section3 body grad">
 		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			Insert Something Decorative
 		</div>
@@ -121,7 +119,7 @@
 	<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
 	
 	<!-- ///////////////////// SECTION 4 BEGIN  //////////////////////// -->
-	<div class="section4 body">
+	<div class="section4 body grad">
 		<div class="H L col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<div class="L4 s">
 				<h1>
