--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 	<!-- ///////////////////// SECTION -1 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
-	<div class="section0 body">
-		<img class="Lindon" src="Assets/Artboard1.png" alt="">
+	<div class="section0 container-fluid body">
 	</div>
 	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
 
@@ -137,9 +136,10 @@
 	<!-- ///////////////////// SECTION 4 END  //////////////////////// -->
 	
 	<!-- ///////////////////// SECTION 5 BEGIN  //////////////////////// -->
-	<style>div.section5{padding-top: 150px; height: 300px;}</style>
-	<div class="section5 body">
-		At the bottom some landscape graphic?
+	<style>div.section5{padding-top: 150px;}</style>
+	<div class="section5 container-fluid body">
+		<div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="left" src="Assets/Left.png" alt=""></div>
+		<div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="right" src="Assets/Right.png" alt=""></div>
 	</div>
 	<!-- ///////////////////// SECTION 5 END  //////////////////////// -->
 	
