--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
 	<div class="section0 container-fluid body">
+		<div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="left" src="Assets/Left.png" alt=""></div>
+		<div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="right" src="Assets/Right.png" alt=""></div>
 	</div>
 	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
 
@@ -136,10 +138,8 @@
 	<!-- ///////////////////// SECTION 4 END  //////////////////////// -->
 	
 	<!-- ///////////////////// SECTION 5 BEGIN  //////////////////////// -->
-	<style>div.section5{padding-top: 150px;}</style>
 	<div class="section5 container-fluid body">
-		<div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="left" src="Assets/Left.png" alt=""></div>
-		<div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="right" src="Assets/Right.png" alt=""></div>
+		<img class="LS" src="Assets/Landscapes/1.png" alt="">
 	</div>
 	<!-- ///////////////////// SECTION 5 END  //////////////////////// -->
 	
