--- a/FAQ.html
+++ b/FAQ.html
@@ -62,7 +62,7 @@
 						WHERE IS FTC?
 					</h2>
 					<p>
-						<a href="https://www.google.com/maps/place/Old+Oak+Ranch+Conference+Center/@38.0505547,-120.3058027,14z/data=!4m5!3m4!1s0x8090c857a4edce9b:0xa5a9f8cade9b8664!8m2!3d38.051932!4d-120.310122">Old Oak Ranch Conference Center</a>
+						<a class="OOR" href="https://www.google.com/maps/place/Old+Oak+Ranch+Conference+Center/@38.0505547,-120.3058027,14z/data=!4m5!3m4!1s0x8090c857a4edce9b:0xa5a9f8cade9b8664!8m2!3d38.051932!4d-120.310122">Old Oak Ranch Conference Center</a>
 						<br>
 						15250 Old Oak Ranch Rd, Sonora, CA 95370
 					</p>
@@ -162,6 +162,7 @@
 				
 				
 			</div>
-		<div class="bottom">maybe a landscape down here just for decoration?</div>
-		</div>
+
+
+			<div class="bottom"><img class="LS" src="Assets/Landscapes/4.png" alt=""></div>
 	</body>
