--- a/announcements.html
+++ b/announcements.html
@@ -51,6 +51,8 @@
 	<body>
 	<div class="background">
 		<h1>Announcements</h1>
+
+		<div class="bottom"><img class="LS" src="Assets/Landscapes/2.png" alt=""></div>
 	</div>
 
 	</body>
