--- a/documents.html
+++ b/documents.html
@@ -52,6 +52,8 @@
 	<div class="background">
 		<h1>applications</h1>
 		<h1>forms</h1>
+
+		<div class="bottom"><img class="LS" src="Assets/Landscapes/3.png" alt=""></div>
 	</div>
 		
 
