--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<style> h1{color: white;font-family: "TheBoldFont";font-size: 60px;display: block;padding: 0 10%;text-align: left;}</style>
+		<style> h1{color: white;font-family: "TheBoldFont";font-size: 60px;display: block;padding: 0 10%;}</style>
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
@@ -65,49 +65,44 @@
 	<div class="background">
 	<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
 	<div class="section1 body grad">
-		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Something Decorative 
-		</div>
-		<div class="H R col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="R1 s">
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="L1 s">
 				<h1>
 					LEARN
 				</h1>
 				<div class="hover hover1">
-					Offering dozens of informational and interactive workshops, Fall Training Conference provides limitless opportunities to gain knowledge in various topics. Whether you're hosting a workshop to share your expertise or attending one for the first time to learn something new, FTC gives members the opportunity to share new perspectives and ideas.
+					Offering dozens of informational and interactive workshops, Fall Training Conference provides limitless opportunities to gain knowledge in a wide array of topics like leadership, professionalism, and, of course, all things Circle K! Whether you're hosting a workshop to share your expertise or attending one for the first time, FTC will give you the opportunity to share and experience new perspectives and ideas.
 				</div>
 			</div>
-			
-			
+		</div>
+		<div class="R R1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<img class="icon" src="Assets/Icons/Learn.png" alt="">
 		</div>
 	</div>
 	<!-- ///////////////////// SECTION 1 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
 	<div class="section2 body grad">
-		<div class="H L col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="L2 s">
-				<h1>
+		<div class="L L2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<img class="network icon" src="Assets/Icons/Network.png" alt="">
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="R2 s">
+				<h1 class="network moveLeft">
 					NETWORK
 				</h1> 
-				<div class="hover hover2">
-					As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to bring you together with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
+				<div class="hover hover2 moveLeft">
+					As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to connect with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
 				</div>
 			</div>
-		</div>
-		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Something Decorative
 		</div>
 	</div>
 	<!-- ///////////////////// SECTION 2 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
 	<div class="section3 body grad">
-		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Something Decorative
-		</div>
-		<div class="H R col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="R3 s">
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="L3 s">
 				<h1>
 					WELCOME
 				</h1>
@@ -116,23 +111,26 @@
 				</div>
 			</div>
 		</div>
+		<div class="R R3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<img class="icon" src="Assets/Icons/Welcome.png" alt="">
+		</div>
 	</div>
 	<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
 	
 	<!-- ///////////////////// SECTION 4 BEGIN  //////////////////////// -->
 	<div class="section4 body grad">
-		<div class="H L col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="L4 s">
-				<h1>
+		<div class="L L4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<img class="icon" src="Assets/Icons/Enjoy.png" alt="">
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="R4 s">
+				<h1 class="moveLeft">
 					ENJOY
 				</h1>
-				<div class="hover hover4">
+				<div class="hover hover4 moveLeft">
 					Above all, Fall Training Conference is a time for you to enjoy yourself and create long-lasting memories with your CKI friends! With close team activities, amazing campfire skits, and spirited general sessions, FTC really is a Circle K experience for all to treasure.
 				</div>
 			</div>
-		</div>
-		<div class="D col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			Insert Something Decorative
 		</div>
 	</div>
 	<!-- ///////////////////// SECTION 4 END  //////////////////////// -->
