--- a/index.html
+++ b/index.html
@@ -56,17 +56,22 @@
 	<!-- ///////////////////// SECTION -1 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
+	<style>div.line{height: 8px; width: 100%; background: white;}</style>
 	<div class="section0 container-fluid body">
 		<div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="left" src="Assets/Left.png" alt=""></div>
 		<div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="right" src="Assets/Right.png" alt=""></div>
 	</div>
+	<div class="line"></div>
 	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
 
 	<div class="background">
 	<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
 	<div class="section1 body grad">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="L1 s">
+		<div class="L1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<img class="icon" src="Assets/Icons/Learn.png" alt="">
+		</div>
+		<div class="t R R1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="s">
 				<h1>
 					LEARN
 				</h1>
@@ -75,24 +80,21 @@
 				</div>
 			</div>
 		</div>
-		<div class="R R1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<img class="icon" src="Assets/Icons/Learn.png" alt="">
-		</div>
 	</div>
 	<!-- ///////////////////// SECTION 1 END  //////////////////////// -->
 
 	<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
 	<div class="section2 body grad">
-		<div class="L L2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<div class="t L L2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<img class="network icon" src="Assets/Icons/Network.png" alt="">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="R2 s">
-				<h1 class="network moveLeft">
+		<div class="R2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="s">
+				<h1 class="network">
 					NETWORK
 				</h1> 
-				<div class="hover hover2 moveLeft">
-					As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to connect with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
+				<div class="hover hover2">
+					As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to connect you with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
 				</div>
 			</div>
 		</div>
@@ -101,8 +103,11 @@
 
 	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
 	<div class="section3 body grad">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="L3 s">
+		<div class="L3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<img class="welcome icon" src="Assets/Icons/Welcome.png" alt="">
+		</div>
+		<div class="t R R3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="s">
 				<h1>
 					WELCOME
 				</h1>
@@ -111,23 +116,20 @@
 				</div>
 			</div>
 		</div>
-		<div class="R R3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<img class="icon" src="Assets/Icons/Welcome.png" alt="">
-		</div>
 	</div>
 	<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
 	
 	<!-- ///////////////////// SECTION 4 BEGIN  //////////////////////// -->
 	<div class="section4 body grad">
-		<div class="L L4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<div class="t L L4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<img class="icon" src="Assets/Icons/Enjoy.png" alt="">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="R4 s">
-				<h1 class="moveLeft">
+		<div class="R4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<div class="s">
+				<h1>
 					ENJOY
 				</h1>
-				<div class="hover hover4 moveLeft">
+				<div class="hover hover4">
 					Above all, Fall Training Conference is a time for you to enjoy yourself and create long-lasting memories with your CKI friends! With close team activities, amazing campfire skits, and spirited general sessions, FTC really is a Circle K experience for all to treasure.
 				</div>
 			</div>
