--- a/committee1.html
+++ b/committee1.html
@@ -14,7 +14,10 @@
 		<meta charset="utf-8"> 
 		<style>
 			div.profile{
-				height: 480px;
+				height: 380px;
+			}
+			img.img-circle{
+				width: 200px;
 			}
 			img.cki{
 				margin-top: -23px;
