--- a/committee.html
+++ b/committee.html
@@ -53,7 +53,13 @@
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
 	<body>
-		<img src="Assets/Committee/Cropped/Group.png" alt="" class="group">
+	<div style="position:relative;">  
+
+	    <img src = "Assets/Committee/Cropped/Group.png" class="group">
+		<style>a.EE{color: #222;}</style>
+	    <div id="EE" style="position:absolute; height: 1px; width:1px;margin: 6.5% 50.1% 0 50%; top:0; left:0; font-size:1px; z-index:5;"><a class="EE" href="committee1.html" >a</a></div>
+
+	</div>
 
 		<div class="header">
 			<h1>Fall Training Conference Committee 2017</h1>
