--- a/committee1.html
+++ b/committee1.html
@@ -86,8 +86,8 @@
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jonathan.png" onmouseover="this.src='Assets/Committee/Shh/Jonathan.png'" onmouseout="this.src='Assets/Committee/Cropped/Jonathan.png'" />
-		      <h3>diego</h3>
-		      <h4>Badass Motherfucker</h4>
+		      <h3>Just Me</h3>
+		      <h4>The Only Normal One</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
@@ -141,7 +141,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Josephine.png" onmouseover="this.src='Assets/Committee/Shh/Josephine.png'" onmouseout="this.src='Assets/Committee/Cropped/Josephine.png'" />
 		      <h3>wholesome folsom</h3>
-		      <h4>The Nice One</h4>
+		      <h4>Respectful Pokemon Trainer</h4>
 		      <p>Folsom Lake College</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
@@ -153,13 +153,13 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Alondra.png" onmouseover="this.src='Assets/Committee/Shh/Alondra.png'" onmouseout="this.src='Assets/Committee/Cropped/Alondra.png'" />
 		      <h3>majestic 	<i class="em em-hatching_chick"></i></h3>
-		      <h4>Workshops</h4>
+		      <h4>Mystical French Beast</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Andrea.png" onmouseover="this.src='Assets/Committee/Shh/Andrea.png'" onmouseout="this.src='Assets/Committee/Cropped/Andrea.png'" />
 		      <h3>peppersprayswaqq</h3>
-		      <h4>Wagyu Obsessor</h4>
+		      <h4>Hedgehog and Wagyu Obsessor</h4>
 		      <p>SFSU</p>
 		    </div>
 	</body>
